MybatisPlus实现自动填充

--- a/笔记/笔记.md
+++ b/笔记/笔记.md
@@ -37,3 +37,23 @@ INSERT INTO `user` VALUES (5, 'Billie', 24, 'test5@baomidou.com');
 
 ![findAll](笔记/findAll.gif)
 
+# 11-MybatisPlus实现自动填充
+
+## 数据库设置
+
+### 添加字段
+
+#### 脚本
+
+```mysql
+ALTER TABLE user ADD create_time timestamp COMMENT '创建时间';
+ALTER TABLE user ADD update_time timestamp COMMENT '更新时间';
+```
+
+#### 更新结果
+
+![image-20201110202215365](笔记/image-20201110202215365.png)
+
+## 最终效果
+
+无需调用 `user.setCreateTime()` ，运行 `updateUser() `、`addUser()` 可自动设置时间。
