MybatisPlus实现乐观锁

--- a/笔记/笔记.md
+++ b/笔记/笔记.md
@@ -57,3 +57,31 @@ ALTER TABLE user ADD update_time timestamp COMMENT '更新时间';
 ## 最终效果
 
 无需调用 `user.setCreateTime()` ，运行 `updateUser() `、`addUser()` 可自动设置时间。
+
+# 13-MybatisPlus实现乐观锁
+
+## 数据库设置
+
+### 添加字段
+
+#### 脚本
+
+```mysql
+ALTER TABLE `user` ADD COLUMN `version` INT;
+```
+
+#### 更新结果
+
+![image-20201110204237048](笔记/image-20201110204237048.png)
+
+## 最终效果
+
+### testOptimisticLocker()
+
+- 效果：version 字段加一
+- 注意：如果 version 字段为 null , 则加一失败，为了进行正确的测试，需要先给 version 赋初值。
+
+### testOptimisticLockerFail()
+
+直接报错
+
