MybatisPlus实现逻辑删除

--- a/笔记/笔记.md
+++ b/笔记/笔记.md
@@ -85,3 +85,19 @@ ALTER TABLE `user` ADD COLUMN `version` INT;
 
 直接报错
 
+# 15-MybatisPlus实现逻辑删除
+
+## 原理
+
+增加标志位 `deleted` ，为 0 表示未删除，为 1 表示已删除。实际上数据还在，只是查不出来了。
+
+## 数据库设置
+
+### 添加字段
+
+#### 脚本
+
+```mysql
+ALTER TABLE `user` ADD COLUMN `deleted` boolean;
+```
+
